# ease-tts

./: README.md  pyproject.toml  requirements.txt
ease_tts/: _tts.py
ease_tts.egg-info/: PKG-INFO
python_tts/: _tts.py
python_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
