[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-tts"
version = "0.1.0"
description = "A simple Python text-to-speech module!"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name="Madhav", email="kathuriamadhav0703@gmail.com" }
]
dependencies = ["gTTS>=2.0"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Madhav703/python-tts"
